add bosh-logs to test-with-latest-bosh-cli task
Signed-off-by: Nancy Hsieh <nhsieh@pivotal.io>

--- a/scripts/bosh-bootloader/test-with-latest-bosh-cli/task.yml
+++ b/scripts/bosh-bootloader/test-with-latest-bosh-cli/task.yml
@@ -12,6 +12,9 @@ inputs:
   - name: bosh-cli
   - name: terraform-binaries
 
+outputs:
+ - name: bosh-logs
+
 run:
   path: ci/scripts/bosh-bootloader/test-with-latest-bosh-cli/task
 
