--- a/scripts/bosh-bootloader/test-with-latest-terraform/task.yml
+++ b/scripts/bosh-bootloader/test-with-latest-terraform/task.yml
@@ -11,12 +11,17 @@ inputs:
   - name: ci
   - name: terraform
 
+outputs:
+ - name: bosh-logs
+
 run:
   path: ci/scripts/bosh-bootloader/test-with-latest-terraform/task
 
 params:
+  BBL_TEST_ENV_ID_PREFIX:
   BBL_GCP_SERVICE_ACCOUNT_KEY:
-  BBL_GCP_REGION:
   BBL_GCP_ZONE:
   BBL_IAAS:
-  BBL_TEST_ENV_ID_PREFIX:
+  BBL_DOWN_TIMEOUT:
+  BBL_GCP_PROJECT_ID:
+  BBL_GCP_REGION:
