--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -775,7 +775,7 @@ jobs:
     - task: build-binaries
       file: ci/scripts/bosh-bootloader/build-final-release/task.yml
       input_mapping:
-        bbl-final-version: dev-version
+        bbl-version-final: dev-version
         bbl-version: dev-version
     - task: untar-builds
       file: ci/scripts/bosh-bootloader/setup-github-release/task.yml
