Switch to using deploy keys for docs repo
- Deploy keys are the way of the future!

Signed-off-by: Sara Montecino <smontecino@pivotal.io>

--- a/pipelines/control-plane-docs.yml
+++ b/pipelines/control-plane-docs.yml
@@ -8,19 +8,19 @@ resources:
   source:
     uri: git@github.com:pivotal/control-plane-docs
     branch: v0.0.38
-    private_key: ((cf_infra_bot_github_user.private_key))
+    private_key: ((docs-github-deploy-key.private_key))
 - name: docs-v0.0.37
   type: git
   source:
     uri: git@github.com:pivotal/control-plane-docs
     branch: v0.0.37
-    private_key: ((cf_infra_bot_github_user.private_key))
+    private_key: ((docs-github-deploy-key.private_key))
 - name: docs-develop
   type: git
   source:
     uri: git@github.com:pivotal/control-plane-docs
     branch: develop
-    private_key: ((cf_infra_bot_github_user.private_key))
+    private_key: ((docs-github-deploy-key.private_key))
 - name: docs-app
   type: cf
   source:
