--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -248,7 +248,7 @@ jobs:
 - name: bump-leftovers
   public: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: ci
       resource: infrastructure-ci
     - get: bosh-bootloader
@@ -265,7 +265,7 @@ jobs:
 - name: test-bosh-bootloader
   public: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: ci
       resource: infrastructure-ci
     - get: bosh-bootloader
@@ -276,7 +276,7 @@ jobs:
 - name: aws-acceptance-tests
   serial: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       passed: [test-bosh-bootloader]
       trigger: true
@@ -286,7 +286,7 @@ jobs:
     file: ci/scripts/bosh-bootloader/download-terraform/task.yml
     params:
       TF_VERSION: 0.11.7
-  - aggregate:
+  - in_parallel:
     - task: plan
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -307,7 +307,7 @@ jobs:
         BBL_TEST_ENV_ID_PREFIX: bbl-ci
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: upgrade
-  - aggregate:
+  - in_parallel:
     - task: latest-error
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -332,7 +332,7 @@ jobs:
 - name: azure-acceptance-tests
   serial: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       passed: [test-bosh-bootloader]
       trigger: true
@@ -342,7 +342,7 @@ jobs:
     file: ci/scripts/bosh-bootloader/download-terraform/task.yml
     params:
       TF_VERSION: 0.11.7
-  - aggregate:
+  - in_parallel:
     - task: latest-error
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -388,7 +388,7 @@ jobs:
   serial: true
   serial_groups: [vsphere-acceptance]
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       passed: [test-bosh-bootloader]
       trigger: true
@@ -427,7 +427,7 @@ jobs:
   serial: true
   serial_groups: [openstack-acceptance]
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       passed: [test-bosh-bootloader]
       trigger: true
@@ -459,7 +459,7 @@ jobs:
 - name: gcp-acceptance-tests
   serial: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       passed: [test-bosh-bootloader]
       trigger: true
@@ -469,7 +469,7 @@ jobs:
     file: ci/scripts/bosh-bootloader/download-terraform/task.yml
     params:
       TF_VERSION: 0.11.7
-  - aggregate:
+  - in_parallel:
     - task: bbl-tests
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -487,7 +487,7 @@ jobs:
   serial: true
   public: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: ci
       resource: infrastructure-ci
     - get: bosh-bootloader
@@ -512,7 +512,7 @@ jobs:
 - name: test-bosh-bootloader-bump-deployments
   serial: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: ci
       resource: infrastructure-ci
     - get: bosh-bootloader
@@ -525,7 +525,7 @@ jobs:
 - name: aws-acceptance-tests-bump-deployments
   serial: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       resource: bosh-bootloader-bump-deployments-ci
       passed: [test-bosh-bootloader-bump-deployments]
@@ -536,7 +536,7 @@ jobs:
     file: ci/scripts/bosh-bootloader/download-terraform/task.yml
     params:
       TF_VERSION: 0.11.7
-  - aggregate:
+  - in_parallel:
     - task: plan
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -557,7 +557,7 @@ jobs:
         BBL_TEST_ENV_ID_PREFIX: bump-deployments
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: upgrade
-  - aggregate:
+  - in_parallel:
     - task: latest-error
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -582,7 +582,7 @@ jobs:
 - name: azure-acceptance-tests-bump-deployments
   serial: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       resource: bosh-bootloader-bump-deployments-ci
       passed: [test-bosh-bootloader-bump-deployments]
@@ -593,7 +593,7 @@ jobs:
     file: ci/scripts/bosh-bootloader/download-terraform/task.yml
     params:
       TF_VERSION: 0.11.7
-  - aggregate:
+  - in_parallel:
     - task: latest-error
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -641,7 +641,7 @@ jobs:
   serial_groups: [vsphere-acceptance]
   serial: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       resource: bosh-bootloader-bump-deployments-ci
       passed: [test-bosh-bootloader-bump-deployments]
@@ -681,7 +681,7 @@ jobs:
   serial: true
   serial_groups: [openstack-acceptance]
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       resource: bosh-bootloader-bump-deployments-ci
       passed: [test-bosh-bootloader-bump-deployments]
@@ -714,7 +714,7 @@ jobs:
 - name: gcp-acceptance-tests-bump-deployments
   serial: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       resource: bosh-bootloader-bump-deployments-ci
       passed: [test-bosh-bootloader-bump-deployments]
@@ -725,7 +725,7 @@ jobs:
     file: ci/scripts/bosh-bootloader/download-terraform/task.yml
     params:
       TF_VERSION: 0.11.7
-  - aggregate:
+  - in_parallel:
     - task: bbl-tests
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -741,7 +741,7 @@ jobs:
 - name: bbl-downstream-docker-image-bump-deployments
   plan:
   - do:
-    - aggregate:
+    - in_parallel:
       - get: bosh-bootloader
         resource: bosh-bootloader-bump-deployments-ci
         passed:
@@ -785,7 +785,7 @@ jobs:
 - name: test-with-latest-terraform
   serial: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       passed: [test-bosh-bootloader]
     - get: ci
@@ -806,7 +806,7 @@ jobs:
 - name: test-with-latest-bosh-cli
   serial: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       passed: [test-bosh-bootloader]
     - get: ci
@@ -832,7 +832,7 @@ jobs:
 - name: bbl-downstream-docker-image
   plan:
   - do:
-    - aggregate:
+    - in_parallel:
       - get: bosh-bootloader
         trigger: true
         passed:
@@ -875,7 +875,7 @@ jobs:
   serial: true
   build_logs_to_retain: 100
   plan:
-  - aggregate:
+  - in_parallel:
     - get: concourse-deployment
     - get: bosh-bootloader
       passed: [bbl-downstream-docker-image]
@@ -991,7 +991,7 @@ jobs:
 - name: bbl-gcp-concourse
   serial: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: concourse-deployment
     - get: bosh-bootloader
       passed: [bbl-downstream-docker-image]
@@ -1097,7 +1097,7 @@ jobs:
   serial: true
   build_logs_to_retain: 100
   plan:
-  - aggregate:
+  - in_parallel:
     - get: concourse-deployment
     - get: bosh-bootloader
       passed: [bbl-downstream-docker-image]
@@ -1202,7 +1202,7 @@ jobs:
 
 - name: validate-plan-patches
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       passed: [bbl-downstream-docker-image]
     - get: ci
@@ -1210,7 +1210,7 @@ jobs:
     - get: cf-deployment-concourse-tasks-bbl-dev
       passed: [bbl-downstream-docker-image]
       trigger: true
-  - aggregate:
+  - in_parallel:
     - task: 1-az-aws
       file: ci/scripts/bosh-bootloader/validate-plan-patch/task.yml
       params:
@@ -1323,7 +1323,7 @@ jobs:
   serial: true
   build_logs_to_retain: 100
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       passed: [bbl-downstream-docker-image]
     - get: cf-deployment-concourse-tasks
@@ -1462,7 +1462,7 @@ jobs:
   serial: true
   build_logs_to_retain: 100
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       passed: [bbl-downstream-docker-image]
     - get: cf-deployment-concourse-tasks
@@ -1622,7 +1622,7 @@ jobs:
   serial: true
   build_logs_to_retain: 100
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       passed: [bbl-downstream-docker-image]
     - get: cf-deployment-concourse-tasks
@@ -1863,7 +1863,7 @@ jobs:
   serial: true
   build_logs_to_retain: 100
   plan:
-  - aggregate:
+  - in_parallel:
     - get: concourse-deployment
     - get: bosh-bootloader
       resource: bosh-bootloader-bump-deployments-ci
@@ -1970,7 +1970,7 @@ jobs:
   serial: true
   build_logs_to_retain: 100
   plan:
-  - aggregate:
+  - in_parallel:
     - get: concourse-deployment
     - get: bosh-bootloader
       resource: bosh-bootloader-bump-deployments-ci
@@ -2088,7 +2088,7 @@ jobs:
   serial: true
   build_logs_to_retain: 100
   plan:
-  - aggregate:
+  - in_parallel:
     - get: concourse-deployment
     - get: bosh-bootloader
       resource: bosh-bootloader-bump-deployments-ci
@@ -2196,7 +2196,7 @@ jobs:
   serial: true
   build_logs_to_retain: 100
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       resource: bosh-bootloader-bump-deployments-ci
       passed: [bbl-downstream-docker-image-bump-deployments]
@@ -2336,7 +2336,7 @@ jobs:
   serial: true
   build_logs_to_retain: 100
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       resource: bosh-bootloader-bump-deployments-ci
       passed: [bbl-downstream-docker-image-bump-deployments]
@@ -2497,7 +2497,7 @@ jobs:
   serial: true
   build_logs_to_retain: 100
   plan:
-  - aggregate:
+  - in_parallel:
     - get: bosh-bootloader
       resource: bosh-bootloader-bump-deployments-ci
       passed: [bbl-downstream-docker-image-bump-deployments]
@@ -2737,7 +2737,7 @@ jobs:
 
 - name: github-release
   plan:
-  - aggregate:
+  - in_parallel:
     - get: ci
       resource: infrastructure-ci
     - get: bosh-bootloader
@@ -2779,7 +2779,7 @@ jobs:
   serial: true
   public: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: ci
       resource: infrastructure-ci
     - get: bbl-release-official
@@ -2821,7 +2821,7 @@ jobs:
   serial: true
   public: true
   plan:
-  - aggregate:
+  - in_parallel:
     - get: ci
       resource: infrastructure-ci
     - get: bosh-bootloader-bumped
@@ -2866,7 +2866,7 @@ jobs:
 
 - name: bump-brew-tap
   plan:
-    - aggregate:
+    - in_parallel:
       - get: homebrew-tap
       - get: bbl-release
         resource: bbl-release-official
@@ -2887,7 +2887,7 @@ jobs:
 
 - name: bump-bbl-docs
   plan:
-   - aggregate:
+   - in_parallel:
      - get: bbl-release-official
        trigger: true
        params:
