update bosh-bootloader git source temporarily
Signed-off-by: Nancy Hsieh <nhsieh@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -117,7 +117,7 @@ resources:
 - name: infrastructure-ci
   type: git
   source:
-    branch: master
+    branch: github-fix-test
     uri: https://github.com/cloudfoundry/infrastructure-ci.git
 
 - name: infrastructure-ci-bbl-states
