--- a/scripts/bosh-bootloader/build-final-release/task.yml
+++ b/scripts/bosh-bootloader/build-final-release/task.yml
@@ -8,7 +8,7 @@ image_resource:
 
 inputs:
   - name: bosh-bootloader
-  - name: bbl-version-final
+  - name: version
   - name: ci
   - name: terraform-binaries
 
