--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -804,7 +804,7 @@ jobs:
     - task: build-binaries
       file: ci/scripts/bosh-bootloader/build-final-release/task.yml
       input_mapping:
-        bbl-version-final: sha-version
+        version: sha-version
     - task: untar-builds
       file: ci/scripts/bosh-bootloader/setup-github-release/task.yml
     - task: prepare-bbl-dev-docker-workspace
@@ -894,7 +894,7 @@ jobs:
     - task: build-binaries
       file: ci/scripts/bosh-bootloader/build-final-release/task.yml
       input_mapping:
-        bbl-version-final: sha-version
+        version: sha-version
     - task: untar-builds
       file: ci/scripts/bosh-bootloader/setup-github-release/task.yml
     - task: prepare-bbl-dev-docker-workspace
