--- a/pipelines/control-plane-docs.yml
+++ b/pipelines/control-plane-docs.yml
@@ -36,8 +36,11 @@ jobs:
   plan:
     - get: mkdocs-pivotal-theme
     - get: docs-v1.0.0
+      trigger: true
     - get: docs-v0.0.37
+      trigger: true
     - get: docs-develop
+      trigger: true
     - task: build-docs
       config:
         platform: linux
